# GIStoOHQ

./: .gitignore  CITATION.cff  LICENSE  README.md  cn_lookup.csv  config.example.json  config.four-step.example.json  config.json  config.one-step.example.json  pyproject.toml  requirements.txt  run.py  sligo_creek.csv
config/: default.yml  logging.yml
docs/: architecture.md  data_downloaders.md  developer.md  examples.md  input_generation.md  ohq_format.md  ohq_mapping.md  soil_data_retrieval.md  workflow.md
ohqbuilder/: __init__.py  app_runner.py  cli.py  dem_acquisition.py  dem_downloader.py  dem_materializer.py  dem_workflow.py  demcheck_adapter.py  doctor.py  full_runner.py  hydro_materializer.py  input_downloader.py  legacy_inputs.py  logger.py  outlet_creator.py  phase1_fetcher.py  pipeline.py  pour_points.py  qgis_env.py  settings.py  soil_retrieval.py  source_materializer.py  usda.py  watershed_bounds.py
scripts/: check_run_workflows.py  create_phase2_minimal_inputs.py  download_all_inputs.py  retrieve_hydrologic_soil_groups.py  retrieve_soil_texture.py  run_dem_prep.sh  run_dem_ui.sh  run_pipeline.py  run_sligo_creek_100.sh  run_sligo_creek_full.sh  run_sligo_creek_terminal.sh  run_watershed_full.sh
templates/: junction.template  outlet.template  rainfall.template  reach.template  subbasin.template  watershed.ohq  watershed_template.ohq
tests/: test_app_runner.py  test_cli.py  test_dem_acquisition.py  test_dem_downloader.py  test_dem_materializer.py  test_dem_workflow.py  test_demcheck_adapter.py  test_doctor.py  test_full_runner.py  test_pipeline.py  (+18 more)
(+104 files in other folders)
